[project]
name = "aeryn-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "psycopg>=3.2.8",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]
